fix: map section spacings

--- a/main_maps.css
+++ b/main_maps.css
@@ -6,7 +6,6 @@
     gap: 10%;
     height: auto;
     width: 100%;
-    margin-bottom: 10vh;
 }
 
 .mapBlock {
@@ -15,6 +14,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    margin-bottom: 10vh;
 }
 
 .mapItem {
@@ -78,6 +78,10 @@
 .mapPinImage {
     height: 1.5em;
     width: auto;
+}
+
+#mapSectionContainer .subSectionTitle {
+    margin-top: 0px;
 }
 
 /* Phone design */
